--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,8 @@ body {
     width: 100%;
     height: 100dvh;
     position: fixed;
-    background-color: rgba(0,0,0,0.7);
+    top: 0;
+    background-color: rgba(0,0,0,0.2);
     backdrop-filter: blur(2px);
 }
 /* <<<< Box >>>> */
