--- a/src/components/template/Search/Search.css
+++ b/src/components/template/Search/Search.css
@@ -8,6 +8,11 @@
     align-items: center;
     gap: 1rem;
 }
+.search_buttons{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
 .search_btn{
     display: flex;
     align-items: center;
@@ -46,4 +51,33 @@
     font-weight: 700;
     color: var(--white);
     padding-right: 0.3rem;
+}
+
+@media only screen and (max-width: 1200px) {
+    .containers{
+        max-width: 960px;
+    }
+    
+    
+}
+@media only screen and (max-width: 992px) {
+    .containers{
+        max-width: 720px;
+    }
+
+    
+}
+@media only screen and (max-width: 768px) {
+    .container{
+        max-width: 540px;
+    }
+    .box{
+       display: flex;
+       flex-direction: column-reverse;
+    }
+}
+@media only screen and (max-width: 576px) {
+    .containers{
+        max-width: 100%;
+    }
 }
