--- a/src/index.css
+++ b/src/index.css
@@ -92,3 +92,16 @@ body {
     box-shadow: none;
     background-color: var(--green-100);
 }
+.swal-button--cancel{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    box-shadow: none;
+    background-color:rgba(255,0,0,0.9);
+    color: var(--white);
+}
+.swal-button--cancel:not([disabled]):hover{
+    background-color: rgba(255,0,0,0.7);
+}
