--- a/src/components/template/Weather/Weather.css
+++ b/src/components/template/Weather/Weather.css
@@ -23,17 +23,23 @@
 }
 .weather_wrapper{
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
+    width: 100%;
+    gap: 1rem;
     margin-top: 1rem;
 }
 .weather_info{
     display: flex;
+    justify-content: center;
+    flex-basis: 25%;
     width: 100%;
     gap: 2rem;
 }
 .weather_info_img{
-    width:150px ;
+    display: block;
+    width:150px  ;
+    height: 100px;
     object-fit: cover;
 }
 .weather_info_content{
@@ -56,6 +62,7 @@ display: block;
 }
 .weather_content{
     display: block;
+    flex-basis: 20%;
     width: 100%;
 }
 .weather_items{
@@ -84,6 +91,7 @@ display: block;
 
 .weather_days_dateTime{
     display: block;
+    flex-basis: 55%;
 }
 .weather_dateTime{
     display: flex;
